--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Swiper JS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <header>
         <h1>Property Search</h1>
     </header>
@@ -30,7 +32,7 @@
                 <option value="Bay Of Plenty">Bay of Plenty</option>
                 <option value="Gisborne">Gisborne</option>
                 <option value="Hawkes Bay">Hawkes Bay</option>
-               <!-- Rest of options -->
+                <!-- Rest of options -->
             </select>
         </div>
 
@@ -99,10 +101,26 @@
     </div>
     <!-- End of filter container -->
 
+   <!-- Sorting Options -->
+   <div class="sorting-container">
+    <p>Sorting Options:</p>
+    <div class="sorting-btn-container">
+        <button class="sorting-button" id="price-high-to-low-btn">$$$ - $</button>
+        <button class="sorting-button" id="price-low-to-high-btn">$ - $$$</button>
+        <button class="sorting-button" id="alphabetical-btn">A - Z</button>
+    </div>
+</div>
+
     <!-- Results Grid -->
     <div class="results" id="results"></div>
 
-    <!-- Modal *TO BO DONE* -->
+    <!-- Modal *TO BE DONE* -->
+    <dialog id="details-modal">
+        <button id="close-modal"><i class="fa-solid fa-xmark"></i></button>
+        <div class="modal-contents">
+            <!-- populated thru js -->
+        </div>
+    </dialog>
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -111,4 +129,5 @@
     <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
+
 </html>
